--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -20,16 +20,16 @@ bitsandbytes==0.46.1
 blinker==1.9.0
 boto3==1.39.6
 botocore==1.39.6
-Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
+Brotli
 build==1.2.2.post1
 cachetools==5.5.2
-certifi @ file:///C:/b/abs_43o9lm92p9/croot/certifi_1750863864870/work/certifi
+certifi
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==2.1.1
 chromadb==1.0.15
-click @ file:///D:/bld/click_1734858834134/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
+click
+colorama
 coloredlogs==15.0.1
 contourpy==1.3.2
 cryptography==43.0.3
@@ -56,7 +56,7 @@ frozenlist==1.7.0
 fsspec==2024.6.1
 gitdb==4.0.12
 GitPython==3.1.44
-gmpy2 @ file:///C:/b/abs_d8ki0o0h97/croot/gmpy2_1738085498525/work
+gmpy2
 google-api-core==2.25.1
 google-api-python-client==2.177.0
 google-auth==2.40.3
@@ -65,7 +65,7 @@ google-cloud-vision==3.10.2
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
 grpcio==1.73.1
-grpcio-status==1.73.1
+grpcio-status
 gunicorn==23.0.0
 h11==0.16.0
 hf-xet==1.1.5
@@ -87,7 +87,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jiter==0.10.0
 jmespath==1.0.1
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1746352627188/work
+joblib
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.24.0
@@ -112,17 +112,17 @@ marshmallow==3.26.1
 matplotlib==3.10.3
 mdurl==0.1.2
 mkl-service==2.4.0
-mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
-mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
+mkl-fft
+mkl-random
 mmh3==5.1.0
-mpmath @ file:///C:/b/abs_7833jrbiox/croot/mpmath_1690848321154/work
+mpmath
 multidict==6.4.4
 mypy_extensions==1.1.0
 narwhals==1.42.1
 nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.9.1
-numpy==2.1.2
+numpy
 oauth2client==4.1.3
 oauthlib==3.2.2
 olefile==0.47
@@ -130,7 +130,7 @@ ollama==0.5.1
 omegaconf==2.3.0
 onnx==1.18.0
 onnxruntime==1.22.0
-openai==1.97.0
+openai==1.97.1
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 opencv-python-headless==4.12.0.88
@@ -140,7 +140,7 @@ opentelemetry-exporter-otlp-proto-grpc==1.34.1
 opentelemetry-instrumentation==0.55b1
 opentelemetry-instrumentation-asgi==0.55b1
 opentelemetry-instrumentation-fastapi==0.55b1
-opentelemetry-proto==1.34.1
+opentelemetry-proto
 opentelemetry-sdk==1.34.1
 opentelemetry-semantic-conventions==0.55b1
 opentelemetry-util-http==0.55b1
@@ -153,16 +153,16 @@ pdf2image==1.17.0
 pdfminer.six==20250506
 pi_heif==1.0.0
 pikepdf==9.10.2
-pillow @ file:///C:/b/abs_68t826txdy/croot/pillow_1744613085333/work
+Pillow
 pluggy==1.6.0
 posthog==4.8.0
 propcache==0.3.2
 proto-plus==1.26.1
-protobuf==5.29.5
+protobuf
 psutil==7.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1_modules==0.4.2   
 pybase64==1.4.1
 pycocotools==2.0.10
 pycparser==2.22
@@ -180,7 +180,7 @@ pypdfium2==4.30.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
+PySocks
 pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
@@ -190,10 +190,10 @@ python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.2
 pytz==2025.2
-PyYAML @ file:///C:/b/abs_14xkfs39bx/croot/pyyaml_1728657968772/work
+PyYAML
 RapidFuzz==3.13.0
 referencing==0.36.2
-regex @ file:///D:/bld/regex_1683147164329/work
+regex
 requests==2.28.1
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
@@ -201,7 +201,7 @@ rich==14.0.0
 rpds-py==0.25.1
 rsa==4.9.1
 s3transfer==0.13.0
-sacremoses @ file:///home/conda/feedstock_root/build_artifacts/sacremoses_1651557636210/work
+sacremoses
 safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.15.3
@@ -209,7 +209,7 @@ seaborn==0.13.2
 sentence-transformers==5.0.0
 sentencepiece==0.2.0
 shellingham==1.5.4
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+six
 smart_open==7.3.0.post1
 smmap==5.0.2
 sniffio==1.3.1
@@ -232,12 +232,12 @@ torch==2.5.1
 torchaudio==2.5.1
 torchvision==0.20.1
 tornado==6.5.1
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1735661334605/work
+tqdm
 transformers==4.53.3
 typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
-typing_extensions @ file:///C:/b/abs_0ffjxtihug/croot/typing_extensions_1734714875646/work
+typing_extensions
 tzdata==2025.2
 tzlocal==5.3.1
 unstructured==0.18.9
@@ -254,7 +254,7 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
+win-inet-pton
 wrapt==1.17.2
 yarl==1.20.1
 zipp==3.23.0
